fix: parks/stores spacing and box shadow on header/footer

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -10,6 +10,7 @@
   font-family: "Leckerli One", serif;
   font-weight: 400;
   font-style: normal;
+  box-shadow: 2px 0 2px 1px purple;
 }
 /*#f75414*/
 
