--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -15,9 +15,11 @@
   justify-content: space-evenly;
   align-items: center;
   border-bottom: 2px solid #f75414;
+  box-shadow: 0 3px 2px -2px purple;
   background-color: white;
- 
 }
+
+
 
 #nav-ul {
   width: 100%;
